--- a/client/src/app.css
+++ b/client/src/app.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;700&display=swap");
 
 * {
@@ -8,6 +9,7 @@
 
 body {
   font-size: 16px;
+  font-family: "Roboto", sans-serif;
   background-color: #f1f1f1;
 }
 
@@ -32,9 +34,14 @@ body {
 .gridContainer {
   flex: 2;
   background-color: aqua;
+  padding: 2rem;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  gap: 15px;
 }
 
 .formContainer {
   flex: 1;
   background-color: yellow;
+  padding: 2rem;
 }
